# embedded-project-template

./: CMakeLists.txt  README.md  app.overlay  prj.conf
docs/: PRD.md
llm-context/bluetooth/: 01_Bluetooth LE introduction.md  02_Bluetooth LE Advertising.md  03_Bluetooth LE Connections.md  04_Data exchange in Bluetooth LE.md  05_Security in Bluetooth LE communication.md  06_Bluetooth LE sniffer.md
llm-context/fundamentals/: 01_nRF Connect SDK structure and content.md  02_Reading buttons and controlling LEDs.md  03_Elements of an nRF Connect SDK application.md  04_Printing messages to console and logging.md  05_Serial communication (UART).md  06_I2C-Protocol.md  07_Multithreaded applications.md  08_Thread synchronization.md
src/: ad5940_port.c  main.c
src/AD5940/: BodyImpedance.c  ad5940_port.c
